--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Riko Bot - Asisten Canggih untuk Grup WhatsApp Anda</title>
-    <link rel="icon" href="https://i.pinimg.com/736x/1a/3e/37/1a3e37815b81023c7a03c3a4f6a53d3c.jpg" type="image/jpeg">
+    <link rel="icon" href="assets/icon.jpg" type="image/jpeg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
