--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Riko Bot - Asisten Canggih untuk Grup WhatsApp Anda</title>
-    <link rel="icon" href="assets/icon.jpg" type="image/jpeg">
+    <link rel="icon" href="./assets/icon.jpg" type="image/jpeg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,7 +55,7 @@
     <header class="sticky top-0 z-50 bg-slate-900/70 backdrop-blur-lg border-b border-slate-800">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-3">
-                <img src="https://i.pinimg.com/736x/1a/3e/37/1a3e37815b81023c7a03c3a4f6a53d3c.jpg" alt="Riko Bot Icon" class="h-8 w-8 rounded-full">
+                <img src="./assets/icon.jpg" alt="Riko Bot Icon" class="h-8 w-8 rounded-full">
                 <a href="#" class="text-2xl font-bold text-white">Riko Bot</a>
             </div>
             <div class="hidden md:flex items-center space-x-6">
