--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <i data-lucide="gamepad-2" class="text-indigo-400 h-8 w-8"></i>
                         </div>
                         <h3 class="text-xl font-bold text-white mb-2">Mini-Game Seru</h3>
-                        <p class="text-slate-400">Mainkan berbagai game seperti Coinflip, Slots, Blackjack, Dice, dan Quiz untuk menambah keseruan di grup.</p>
+                        <p class="text-slate-400">Mainkan berbagai game seperti Coinflip, Slots, Blackjack, Dice, Quiz, dan Akinator untuk menambah keseruan di grup.</p>
                     </div>
                      <!-- Feature Card 5 -->
                     <div class="command-card p-6 rounded-xl">
@@ -232,6 +232,7 @@
                 { cmd: "!ubahviewonce", desc: "Mengirim ulang pesan sekali lihat" }
             ],
             fun: [
+                { cmd: "akinator", desc: "Main game Akinator menebak karakter yang kamu pikirkan!" },
                 { cmd: "!blackjack", desc: "Main Blackjack lawan bot" },
                 { cmd: "!coinflip", desc: "Main coinflip untuk menggandakan gold" },
                 { cmd: "!dice", desc: "Tebak angka dadu untuk menang gold" },
