--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 { cmd: "!ubahviewonce", desc: "Mengirim ulang pesan sekali lihat" }
             ],
             fun: [
-                { cmd: "akinator", desc: "Main game Akinator menebak karakter yang kamu pikirkan!" },
+                { cmd: "!akinator", desc: "Main game Akinator menebak karakter yang kamu pikirkan!" },
                 { cmd: "!blackjack", desc: "Main Blackjack lawan bot" },
                 { cmd: "!coinflip", desc: "Main coinflip untuk menggandakan gold" },
                 { cmd: "!dice", desc: "Tebak angka dadu untuk menang gold" },
